--- a/finalprojectv04.html
+++ b/finalprojectv04.html
@@ -191,32 +191,32 @@
 
       .danye-img1 {
         background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-          url(../img/328/Release_1.png);
+          url(../img/Release_1.png);
       }
 
       .danye-img2 {
         background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-          url(../img/328/Set_1.jpg);
+          url(../img/Set_1.jpg);
       }
 
       .danye-img3 {
         background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-          url(../img/328/Set_2.jpg);
+          url(../img/Set_2.jpg);
       }
 
       .danye-img4 {
         background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-          url(../img/328/Set_3.jpg);
+          url(../img/Set_3.jpg);
       }
 
       .danye-img5 {
         background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-          url(../img/328/redlightradio.png);
+          url(../img/redlightradio.png);
       }
 
       .danye-img6 {
         background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)),
-          url(../img/328/redlightradio.png);
+          url(../img/redlightradio.png);
       }
 
       .danye-info {
@@ -370,11 +370,10 @@
       <ul class="danye-grid">
         <li>
           <div class="danye-box danye-img1">
-              <div class="danye-info">
-                <h3>Release</h3>
-                <p>Sinchi - Altered States Vol.4<br />(May 2021)</p>
-              </div>
-            </a>
+            <div class="danye-info">
+              <h3>Release</h3>
+              <p>Sinchi - Altered States Vol.4<br />(May 2021)</p>
+            </div>
           </div>
         </li>
         <li>
